tests/miniJava/neg/000121_mutation.MiniJava
class java { public new void Main ( String [ ] java ) { { } } }
